--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <p>Hello, Git!</p>
+    <p>This is my second message</p>
     <script src="js/script.js"></script>
   </body>
 </html>
